# campaign-zip-code-sync

./: .gitignore  DEPLOY.md  MAKEFILE  README.md  github-actions-key  github-actions-key.pub  google_ads_script.js  pyproject.toml  zips_to_dict.py
.github/workflows/: deploy.yml
tests/: test_zip_code_filter.py
zip-sync/filter/: zip_code_filter.py
zip_sync/: __main__.py  zip_code_service.py
zip_sync/ads_api/: campaign_criterion_id_fetcher.py  campaign_criterion_mutator.py  campaign_fetcher.py  google_ads_client.py  location_criteria_id_service.py
zip_sync/ads_api/report/: get_report.py  options_enums_mapper.py  query_builder.py  stream_handler.py
zip_sync/constants/: zips_dict.py
zip_sync/core/: update_campaigns.py  update_google_sheets.py
zip_sync/data/: zip_code_fetcher.py
zip_sync/environment/: environment_service.py  folder_paths.py  load_environment_variables.py
zip_sync/filter/: zip_code_filter.py
zip_sync/sheets/: sheets_service.py
zip_sync/slack/: send_admin_slack.py  send_alert_slack.py  slack_notifier.py
zip_sync/utils/: chunker.py
